<?xml version="1.0" encoding="utf-8"?>
<!--
mOnionO - The mobile Onion Observer
Copyright (C) 2012 Jens Bruhn (moniono@gmx.net)

This program is free software; you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation; either version 2 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License along
with this program; if not, write to the Free Software Foundation, Inc.,
51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA. 
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical" >
    <ScrollView android:id="@+id/verticalScrollViewMain"
        	android:layout_width="wrap_content"
			android:layout_height="wrap_content" >
    	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical" >
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					style="@style/mOnionOStyle.Section">
				<ImageView android:id="@+id/bookmark_icon_3"
		            	android:layout_width="wrap_content"
            			android:layout_height="wrap_content"
            			android:src="@drawable/bookmark"
            			android:visibility="visible" 
            			style="@style/mOnionOStyle.ActionBarImage"/>
        		<ImageView android:id="@+id/edit_name_icon"
            			android:layout_width="wrap_content"
            			android:layout_height="wrap_content"
            			android:src="@drawable/edit"
            			android:visibility="visible" 
            			style="@style/mOnionOStyle.ActionBarImage"/>
        		<ImageView android:id="@+id/reset_icon"
            			android:layout_width="wrap_content"
            			android:layout_height="wrap_content"
            			android:src="@drawable/refresh"
            			android:visibility="visible" 
            			style="@style/mOnionOStyle.ActionBarImage"/>
		        <ImageView android:id="@+id/save_icon"
            			android:layout_width="wrap_content"
            			android:layout_height="wrap_content"
            			android:src="@drawable/save"
            			android:visibility="visible"
            			style="@style/mOnionOStyle.ActionBarImage"/>
			</LinearLayout>
		    <HorizontalScrollView android:id="@+id/horizontalScrollView1"
        			android:layout_width="match_parent"
        			android:layout_height="wrap_content" >
		        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            			android:id="@+id/relay_details_table"
            			android:layout_width="match_parent"
            			android:layout_height="wrap_content">
		            <TableRow android:id="@+id/relay_details_nickname_row"
                			android:layout_width="match_parent"
                			android:layout_height="wrap_content"
                			android:layout_gravity="bottom" >
		                <TextView android:id="@+id/nickname_label"
                    			android:layout_width="wrap_content"
                    			android:layout_height="wrap_content"
                    			android:layout_gravity="center_vertical"
                    			android:text="@string/nickname"
                    			style="@style/mOnionOStyle.TableTitleCell"/>
		                <EditText android:id="@+id/nickname_input"
                    			android:layout_width="match_parent"
                    			android:layout_height="wrap_content"
                    			android:scrollHorizontally="true"
                    			android:singleLine="true"
                    			android:visibility="gone"/>
		                <TextView android:id="@+id/relay_details_nickname"
                    			android:layout_width="wrap_content"
                    			android:layout_height="wrap_content"
                    			android:layout_gravity="center_vertical" />
		            </TableRow>
		            <TableRow android:id="@+id/relay_details_hash_row"
                			android:layout_width="match_parent"
                			android:layout_height="wrap_content"
                			android:layout_gravity="top" >
		                <TextView android:id="@android:id/empty"
                    			android:layout_width="wrap_content"
                    			android:layout_height="wrap_content"
                    			android:text="@string/fingerprint"
                    			style="@style/mOnionOStyle.TableTitleCell"/>
		                <TextView android:id="@+id/relay_details_hash"
                    			android:layout_width="wrap_content"
                    			android:layout_height="wrap_content" />
            		</TableRow>
	            	<TableRow android:id="@+id/relay_details_ip_row"
	                		android:layout_width="match_parent"
	                		android:layout_height="wrap_content"
	                		android:layout_gravity="top"
	                		android:visibility="gone" >
		                <TextView android:id="@android:id/empty"
	                    		android:layout_width="wrap_content"
	                    		android:layout_height="wrap_content"
	                    		android:text="@string/ip"
	                    		style="@style/mOnionOStyle.TableTitleCell"/>
		                <TextView android:id="@+id/relay_details_ip"
	                    		android:layout_width="wrap_content"
	                    		android:layout_height="wrap_content" />
	            	</TableRow>
	                <TableRow android:id="@+id/relay_details_bandwidth_row"
	                		android:layout_width="match_parent"
	                		android:layout_height="wrap_content"
	                		android:layout_gravity="top"
	                		android:visibility="gone" >
	                	<TextView android:id="@android:id/empty"
	                    		android:layout_width="wrap_content"
	                    		android:layout_height="wrap_content"
	                    		android:text="@string/bandwidth"
	                    		style="@style/mOnionOStyle.TableTitleCell"/>
		                <TextView android:id="@+id/relay_details_bandwidth"
	                    		android:layout_width="wrap_content"
	                    		android:layout_height="wrap_content" />
	            	</TableRow>
		            <TableRow android:id="@+id/relay_details_dir_address_row"
	                		android:layout_width="match_parent"
	                		android:layout_height="wrap_content"
	                		android:layout_gravity="top"
	                		android:visibility="gone" >
		                <TextView android:id="@android:id/empty"
	                    		android:layout_width="wrap_content"
	                    		android:layout_height="wrap_content"
	                    		android:text="@string/dir_address"
	                    		style="@style/mOnionOStyle.TableTitleCell"/>
		                <TextView android:id="@+id/relay_details_dir_address"
	                    		android:layout_width="wrap_content"
	                    		android:layout_height="wrap_content" />
	            	</TableRow>
		            <TableRow android:id="@+id/relay_details_restart_time_row"
	                		android:layout_width="match_parent"
	                		android:layout_height="wrap_content"
	                		android:layout_gravity="top"
	                		android:visibility="gone">
		                <TextView android:id="@android:id/empty"
	                    		android:layout_width="wrap_content"
	                    		android:layout_height="wrap_content"
	                    		android:text="@string/restart_timestamp"
	                    		style="@style/mOnionOStyle.TableTitleCell"/>"
		                <TextView android:id="@+id/relay_details_restart_time"
	                    		android:layout_width="wrap_content"
	                    		android:layout_height="wrap_content" />
           			</TableRow>
		            <TableRow android:id="@+id/relay_details_contact_row"
		                	android:layout_width="match_parent"
		                	android:layout_height="wrap_content"
		                	android:layout_gravity="top"
		                	android:visibility="gone" >
		                <TextView android:id="@android:id/empty"
		                    	android:layout_width="wrap_content"
		                    	android:layout_height="wrap_content"
		                    	android:text="@string/contact"
		                    	style="@style/mOnionOStyle.TableTitleCell"/>
		                <TextView android:id="@+id/relay_details_contact"
		                    	android:layout_width="wrap_content"
		                    	android:layout_height="wrap_content" />
		            </TableRow>
		            <TableRow android:id="@+id/relay_details_platform_row"
		                	android:layout_width="match_parent"
		                	android:layout_height="wrap_content"
		                	android:layout_gravity="top"
		                	android:visibility="gone" >
		                <TextView android:id="@android:id/empty"
		                    	android:layout_width="wrap_content"
		                    	android:layout_height="wrap_content"
		                    	android:text="@string/platform"
		                    	style="@style/mOnionOStyle.TableTitleCell"/>
		                <TextView android:id="@+id/relay_details_platform"
		                    	android:layout_width="wrap_content"
		                    	android:layout_height="wrap_content" />
		            </TableRow>
		            <TableRow android:id="@+id/relay_details_country_row"
		                	android:layout_width="match_parent"
		                	android:layout_height="wrap_content"
		                	android:layout_gravity="top"
		                	android:visibility="gone" >
		                <TextView android:id="@android:id/empty"
		                    	android:layout_width="wrap_content"
		                    	android:layout_height="wrap_content"
		                    	android:text="@string/country"
		                    	style="@style/mOnionOStyle.TableTitleCell"/>
		                <TextView android:id="@+id/relay_details_country"
		                    	android:layout_width="wrap_content"
		                    	android:layout_height="wrap_content" />
		            </TableRow>
		            <TableRow android:id="@+id/relay_details_latitude_row"
		                	android:layout_width="match_parent"
		                	android:layout_height="wrap_content"
		                	android:layout_gravity="top"
		                	android:visibility="gone" >
		                <TextView android:id="@android:id/empty"
		                    	android:layout_width="wrap_content"
		                    	android:layout_height="wrap_content"
		                    	android:text="@string/latitude"
		                    	style="@style/mOnionOStyle.TableTitleCell"/>
		                <TextView android:id="@+id/relay_details_latitude"
		                    	android:layout_width="wrap_content"
		                    	android:layout_height="wrap_content" />
		            </TableRow>
		            <TableRow android:id="@+id/relay_details_longitude_row"
		                	android:layout_width="match_parent"
		                	android:layout_height="wrap_content"
		                	android:layout_gravity="top"
		                	android:visibility="gone" >
		                <TextView android:id="@android:id/empty"
		                    	android:layout_width="wrap_content"
		                    	android:layout_height="wrap_content"
		                    	android:text="@string/longitude"
		                    	style="@style/mOnionOStyle.TableTitleCell"/>
		                <TextView android:id="@+id/relay_details_longitude"
		                    	android:layout_width="wrap_content"
		                    	android:layout_height="wrap_content" />
		            </TableRow>
		            <TableRow android:id="@+id/relay_details_pool_assignment_row"
		                	android:layout_width="match_parent"
		                	android:layout_height="wrap_content"
		                	android:layout_gravity="top"
		                	android:visibility="gone" >
		                <TextView android:id="@android:id/empty"
		                    	android:layout_width="wrap_content"
		                    	android:layout_height="wrap_content"
		                    	android:text="@string/pool_assignment"
		                    	style="@style/mOnionOStyle.TableTitleCell"/>
		                <TextView android:id="@+id/relay_details_pool_assignment"
		                    	android:layout_width="wrap_content"
		                    	android:layout_height="wrap_content" />
		            </TableRow>
		            <TableRow android:id="@+id/relay_details_family_row"
		                	android:layout_width="match_parent"
		                	android:layout_height="wrap_content"
		                	android:layout_gravity="top"
		                	android:visibility="gone" >
		                <TextView android:id="@android:id/empty"
		                    	android:layout_width="wrap_content"
		                    	android:layout_height="wrap_content"
		                    	android:text="@string/family"
		                    	style="@style/mOnionOStyle.TableTitleCell"/>
		                <ListView android:id="@+id/relay_details_family_list"
			                	android:layout_width="match_parent"
			                	android:layout_height="wrap_content" />
		            </TableRow>
        		</TableLayout>
    		</HorizontalScrollView>
		</LinearLayout>
	</ScrollView>
</LinearLayout>